<resources>
    <string name="app_name">Diary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language">Language</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="chinese">Chinese</string>
    <string name="hindi">Hindi</string>
    <string name="newestFeed">Newest Feed</string>
    <string name="oldestfirst">Oldest first</string>
    <string name="maxsizePassword">Maximum length reached</string>
    <string name="nodigitstoremove">No digits to remove</string>
    <string name="incorrectPass">Incorrect Password</string>
    <string name="incorrectEmail">Incorrect Answer</string>
    <string name="pleaseEnterEmail">Please Enter Your answer</string>
    <string name="confirm">Confirm</string>
    <string name="emailHint">Please Input Your answer...</string>
    <string name="setVerificationEmail">Set  a security question </string>
    <string name="setVerificationEmailDsc">This question is used to verify your identity when you forget your passcode</string>
    <string name="forGotPassword">Forgot Password?</string>
    <string name="confirmPassword">Confirm Your Pin</string>
    <string name="saveandsecure">Save and Secure</string>
    <string name="letsgo">Let\'s Go!</string>
    <string name="letsstart">Let\'s start!</string>
    <string name="setpasscode">Enter Passcode</string>

    <string name="getReady">Get Ready</string>
    <string name="welcome">Welcome!</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="backupnow">Back up Now</string>
    <string name="apptheme">App Theme</string>
    <string name="appply">Apply</string>
    <string name="notifications">Notifications</string>
    <string name="backtogoogle">Backup to my google drive</string>
    <string name="updatedsuccessfuly">Updated Successfully</string>
    <string name="deletedsuccessfuly">Deleted Successfully</string>
    <string name="done">Done</string>
    <string name="avoiddatalosss">Avoid Data loss when you change the device</string>
    <string name="addAudioFiles">Add Audio Files</string>
    <string name="title">Title</string>
    <string name="gallery">Gallery</string>
    <string name="background">Background</string>
    <string name="image">Image</string>
    <string name="emoji">Emoji</string>
    <string name="allCapitalLettersTextview">AA</string>
    <string name="normalLettersTextview">Aa</string>
    <string name="allsmallLettersTextview">aa</string>
    <string name="recording">Recording</string>
    <string name="hashtag">HashTag</string>
    <string name="maxImageSize">Maximum of 4 images allowed</string>
    <string name="text">Text</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="voice">Voice</string>
    <string name="deletethisentery">Delete this entry?</string>
    <string name="deletethisenterydsc">Deleting this entry is permanent and you can’t undo it.</string>
    <string name="dontsaveyet">Not saved yet</string>
    <string name="dontsaveyetdsc">Do you want to save the changes you’ve made?</string>
    <string name="photo">Photo</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="search">Search</string>
    <string name="momatchingsearchResults">No matching search Results</string>
    <string name="selectDate">Select Date</string>
    <string name="starttypinghere">Start typing here...</string>
    <string name="welcomehint">Welcome</string>
    <string name="welcomeDetails">welcome to write your memories</string>
    <string name="welcomeFor">Welcome to your diary for.
</string>
    <string name="mydairy">My dairy</string>
    <string name="emptyDesc">Write to your diary for specious memories!
</string>
    <string name="howwasyourdaytoday">How was your day today?</string>
    <string name="writeherefirstMemeory">write your first memory here!</string>
    <string name="welcomeDsc">Welcome to your diary for writing  memories!
</string>
    <string name="getDsc">Start writing, for every moment is worth
preseriving.</string>
    <string name="passwordDesc">Lockup your diary, keep your thoughts and memories safe. Your diary, your rules!</string>
    <string name="monday">Monday</string>
    <string name="preview">Preview</string>
    <string name="rateus">Rate Us</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="deletealldata">Delete all data</string>
    <string name="feedback">Feedback</string>
    <string name="deletetxt">i want to delete...</string>
    <string name="optiontxt">You can Choose Both</string>
    <string name="localdata">Local Data</string>
    <string name="txt">Delete Data stores on your device. Make sure you backup them first if you need to restore them later.</string>
    <string name="cloudtxt">Delete your backed up data. Only keep data stored on your device.</string>
    <string name="clouddata">Cloud Data</string>
    <string name="warning">Warning</string>
    <string name="warningerror">All your data will be permanently deleted.</string>
    <string name="nophotoyet">No photos yet</string>
    <string name="nophotoyetDsc">Your photos will be shown here </string>
    <string name="noThemeisfound">No theme is found, please try again</string>
    <string name="pin">PIN</string>
    <string name="passcode">Passcode</string>
    <string name="enablefingerprint">Enable fingerprint</string>
    <string name="security">Security</string>
    <string name="setverificationemail.">Set Verification Email.</string>
    <string name="rateourapp">Thank you for Using</string>
    <string name="ratenow">Rate Now</string>
    <string name="nothanks">No thanks!</string>
    <string name="longtxt">Rate Our App in Play Store Write Suggestion Message For Us. We Would Be Glad To Hear Your Opinion..</string>
    <string name="enterPasscord">Enter Old Passcode</string>
    <string name="saved">Saved!</string>
    <string name="nameyourRec">Name Your Recording</string>
    <string name="skip">Skip</string>
    <string name="success">Success</string>
    <string name="savepasswordtxt">Your  Password  Has  Been  Successfully
               Updated!</string>
    <string name="qone">What is your favorite color?</string>
    <string name="allq">What is your favorite color? \n Who is your favorite singer? \n What is your favorite food?</string>
    <string name="qthree">What is your favorite food?</string>
    <string name="qtwo">Who is your favorite singer?</string>
    <string name="tapheretonext">Tap here to change your background!</string>
    <string name="exitDsc">Are you sure you want to leave the app?</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="didyouforgottoaddnewPassword">Did you forgot to add new \n Password?</string>
    <string name="biomatrichAuth">"Biometric Authentication</string>
    <string name="biomatrichAuthDsc">Log in using your biometric credential</string>
    <string name="permissionR">Permission Required</string>
    <string name="permissionDesc">We need to access your gallery to import
photos &amp; Voice</string>
    <string name="gotosetting">Go to setting</string>
    <string name="retry">Retry</string>
    <string name="google_Drive_Api" translatable="false">AIzaSyCbXAJyqzvnkcXoUE0cZtuUw69hRwxEyYw</string>

</resources>