<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp"
    android:gravity="center|top"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:id="@+id/mainImage"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/delete_item_icone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainTitle"
        android:layout_gravity="center"
        android:fontFamily="@font/baloo_bhai_2_bold"
        android:text="@string/deletethisentery"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/text_View_Bold"
        android:textSize="@dimen/_14ssp"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:id="@+id/mainDesc"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/deletethisenterydsc"
        android:textAlignment="center"
        android:fontFamily="@font/baloo_bhai_2_bold"
        android:textColor="@color/textViewSmooth"
        android:textSize="@dimen/_12ssp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/rounded_corners_shape"
            android:backgroundTint="@color/red_Smooth"
            android:id="@+id/deleteBtn"
            android:layout_marginEnd="@dimen/_37sdp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_37sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textAlignment="center"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:fontFamily="@font/baloo_bhai_2_bold"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <TextView
            android:layout_marginEnd="@dimen/_37sdp"
            android:layout_marginStart="@dimen/_37sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/rounded_corners_shape"
            android:backgroundTint="@color/unselected_State_Color"
            android:id="@+id/cancelBtn"
            android:textAlignment="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:fontFamily="@font/baloo_bhai_2_bold"
            android:textSize="@dimen/_14ssp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"/>

</LinearLayout>