<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp"
    android:gravity="center|top"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/emojisix"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/baloo_bhai_2_bold"
        android:text="@string/dontsaveyet"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/text_View_Bold"
        android:textSize="@dimen/_14ssp"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/dontsaveyetdsc"
        android:textAlignment="center"
        android:fontFamily="@font/baloo_bhai_2_bold"
        android:textColor="@color/textViewSmooth"
        android:textSize="@dimen/_12ssp" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/rounded_corners_shape"
        android:backgroundTint="@color/pinkButtonColor"
        android:id="@+id/deleteBtn"
        android:layout_marginEnd="@dimen/_37sdp"
        android:layout_marginStart="@dimen/_37sdp"
        android:layout_marginTop="@dimen/_10sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:fontFamily="@font/baloo_bhai_2_bold"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/rounded_corners_shape"
        android:backgroundTint="@color/unselected_State_Color"
        android:id="@+id/cancelBtn"
        android:layout_marginEnd="@dimen/_37sdp"
        android:layout_marginStart="@dimen/_37sdp"
        android:layout_marginTop="@dimen/_10sdp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/discard"
            android:textColor="@color/white"
            android:fontFamily="@font/baloo_bhai_2_bold"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>