<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.mk.diary.presentation.ui.boardpassing.LetsStartFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_20sdp"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_220sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/welcomelogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="@dimen/_18ssp"
            android:layout_marginTop="@dimen/_40sdp"
            android:textColor="@color/text_View_Bold"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:text="@string/welcomeDsc"
            android:textColor="@color/text_View_Bold"
            android:textSize="@dimen/_12ssp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@id/welcomeBtn"
            app:layout_constraintStart_toStartOf="@id/welcomeBtn"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
        <TextView
            android:id="@+id/welcomeBtn"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/letsstart"
            android:backgroundTint="@color/pinkButtonColor"
            android:background="@drawable/rounded_corners_shape"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>