<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.mk.diary.presentation.ui.boardpassing.PasswordVerificationFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/backGroundTheme"/>
    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="@dimen/_20sdp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setVerificationEmail"
                android:textSize="@dimen/_18ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/baloo_bhai_2_bold"
                android:textColor="@color/text_View_Bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/inter_thin"
                android:gravity="center"
                android:text="@string/setVerificationEmailDsc"
                android:textColor="@color/textViewSmooth"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/textView9"
                android:id="@+id/spinnerOneBtn"
                android:layout_width="0dp"
                android:background="@drawable/email_stroke_sh"
                android:drawableEnd="@drawable/arrow_down"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/baloo_bhai_2_semibold"
                android:text="@string/qone"
                android:gravity="center|start"
                android:layout_height="@dimen/_44sdp"
                android:paddingStart="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@+id/emailEd"
                app:layout_constraintStart_toStartOf="@+id/emailEd"
                tools:layout_editor_absoluteY="26dp" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/textView9"
                android:id="@+id/spinnerTwoBtn"
                android:layout_width="0dp"
                android:padding="@dimen/_15sdp"
                android:visibility="gone"
                android:background="@drawable/email_stroke_sh"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >
                <TextView
                    android:id="@+id/qOneBtn"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/baloo_bhai_2_semibold"
                    android:text="@string/qone"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                     />

                <View
                    android:id="@+id/oneV"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:background="#F1F1F1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/qOneBtn" />
                <TextView
                    android:layout_marginTop="@dimen/_8sdp"
                    android:id="@+id/qTwoBtn"
                    android:layout_width="0dp"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/baloo_bhai_2_semibold"
                    android:text="@string/qtwo"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/oneV"
                    />
                <View
                    android:id="@+id/twoV"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:background="#F1F1F1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/qTwoBtn" />

                <TextView
                    android:layout_marginTop="@dimen/_8sdp"
                    android:id="@+id/qThreeBtn"
                    android:layout_width="0dp"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/baloo_bhai_2_semibold"
                    android:text="@string/qthree"
                    android:gravity="center|start"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/twoV"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/emailEd"
                android:paddingEnd="@dimen/_10sdp"
                android:background="@drawable/email_stroke_sh"
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:hint="@string/emailHint"
                android:paddingStart="@dimen/_12sdp"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/baloo_bhai_2"
                android:layout_height="@dimen/_44sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerOneBtn" />
            <androidx.cardview.widget.CardView
                android:id="@+id/confirmBtn"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintEnd_toEndOf="@id/emailEd"
                app:layout_constraintStart_toStartOf="@id/emailEd"
                app:layout_constraintTop_toBottomOf="@+id/emailEd"
                app:cardBackgroundColor="@color/pinkButtonColor"
                app:cardCornerRadius="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:gravity="center"
                    android:fontFamily="@font/baloo_bhai_2_bold"
                    />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>